src/objects/Entitlement.object
<CustomObject>
    <fields>
        <fullName>ARTICOLO__c</fullName>
        <label>Articolo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CODICE_GRUPPO__c</fullName>
        <label>Codice Gruppo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CODICE_PUNTO_VENDITA__c</fullName>
        <label>Codice Punto Vendita</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COD_PRODOTTO_GARANZIA__c</fullName>
        <label>Codice Prodotto Garanzia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COD_SOURCE_SYS__c</fullName>
        <label>Codice Sorgente Sistema</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COSTO_GARANZIA__c</fullName>
        <label>Costo Garanzia</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Codice_Garanzia__c</fullName>
        <label>Codice Garanzia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Entitlements</relationshipLabel>
        <relationshipName>Entitlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DAT_ACQUISTO__c</fullName>
        <label>Data Acquisto</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DAT_FINE_GARANZIA__c</fullName>
        <label>Data Fine Garanzia</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DAT_MODIFICA__c</fullName>
        <label>Data Modifica</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DSB_TIPO_PUNTO_VENDITA__c</fullName>
        <label>Descrizione Breve Tipo Punto Vendita</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DSE_CAT_PRODOTTO_L1__c</fullName>
        <label>Descrizione Estesa Categoria Prodotto L1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DSE_CAT_PRODOTTO_L2__c</fullName>
        <label>Descrizione Estesa Categoria Prodotto L2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DSE_CAT_PRODOTTO_L3__c</fullName>
        <label>Descrizione Estesa Categoria Prodotto L3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DV_CHANGE_DATE__c</fullName>
        <label>DV_CHANGE_DATE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DV_LOAD_DATE__c</fullName>
        <label>DV_LOAD_DATE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data_Prenotazione__c</fullName>
        <label>Data Prenotazione</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fine_Estenzione_Garanzia__c</fullName>
        <label>Fine Estenzione Garanzia</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fine_Garanzia_legale__c</fullName>
        <label>Fine Garanzia legale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fornitore__c</fullName>
        <label>Fornitore</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GARANZIA_HK__c</fullName>
        <label>Garanzie HK</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRUPPO_AFFILIATI__c</fullName>
        <label>Gruppo Affiliati</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Garanzia_Produttore__c</fullName>
        <label>Garanzia Produttore</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_ARTICOLO__c</fullName>
        <label>ID Articolo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_GROUP__c</fullName>
        <label>ID Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMP_GARANZIA_NO_IVA__c</fullName>
        <label>Importo Garanzia Senza IVA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IMP_GARANZIA__c</fullName>
        <label>Importo Garanzia</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IMP_PRODOTTO_NO_IVA__c</fullName>
        <label>Importo Prodotto Senza IVA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IMP_PRODOTTO__c</fullName>
        <label>Importo Prodotto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inizio_Estensione_Garanzia__c</fullName>
        <label>Inizio Estensione Garanzia</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inizio_Garanzia_Legale__c</fullName>
        <label>Inizio Garanzia Legale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MARCA__c</fullName>
        <label>Marca</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MESI_GAR_TRASCORSI__c</fullName>
        <label>Mesi Garanzia Trascorsi</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PUNTO_VENDITA__c</fullName>
        <label>Punto Vendita</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Prezzo_Garanzia__c</fullName>
        <label>Prezzo Garanzia</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Entitlements</relationshipLabel>
        <relationshipName>Entitlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>REPARTO_GARANZIA__c</fullName>
        <label>Reparto Garanzia</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ritiro_Presso__c</fullName>
        <formula>Contact__r.Indirizzo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ritiro Presso</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SERIALE_GARANZIA__c</fullName>
        <label>Seriale Garanzia</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>STATO_GARANZIA__c</fullName>
        <label>Stato Garanzia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIPO_PUNTO_VENDITA__c</fullName>
        <label>Tipo Punto Vendita</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_Intervento__c</fullName>
        <label>Tipo Intervento</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_Entitlements</fullName>
        <columns>ENTITLEMENT.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ENTITLEMENT.STARTDATE</columns>
        <columns>ENTITLEMENT.ENDDATE</columns>
        <columns>ENTITLEMENT.STATUS</columns>
        <filterScope>Everything</filterScope>
        <label>All Entitlements</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>